--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+
+*{
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;    
+
+
+
+
+
+/* Scrollbar styling */
+
+/* Works on Firefox */
+.styleScroll{
+scrollbar-width: thin;
+scrollbar-color: rgb(218, 121, 121) auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Works on Chrome, Edge, and Safari */
+.styleScroll::-webkit-scrollbar {
+width: 7px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.styleScroll::-webkit-scrollbar-track {
+background: transparent;
 }
 
-.App-link {
-  color: #61dafb;
+.styleScroll::-webkit-scrollbar-thumb {
+background-color:rgb(218, 121, 121);
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* End scrollbar styling*/
